Added Disconnect Button

--- a/web3modal/frontend/styles/Home.module.css
+++ b/web3modal/frontend/styles/Home.module.css
@@ -20,7 +20,7 @@
 
 .connectWalletButton {
   cursor: pointer;
-  color: #fff;
+  color: #1c1c1c;
   padding: 10px 20px;
   border-radius: 5px;
   border: none;
